﻿
20/1/2016:
* UP: HML implementation largely done
* TEST: testing of HML system started: a few early bugs have been fixed, but there's gonna be a lot of work to do yet
* REFACT: lots of type manipulation stuff, useful for putting asserts checking System-F types, normal form etc.
* FIX: old type inference code introducing fresh vars into Γ have been updated to introduce a boundary for that var into the prefix as well.
       One example of this is pt_patt dealing with P_Var term


19/1/2016:
* REFACT: prefix is now a heavyweight type which is basically a native tail-append list; all operations have become members
* REFACT: ForallK and ForallsK rewritten simply using the ty.kind method on the type bound
* UP: kind inference and type evaluation for Forall term fixed
* REFACT: convention for computation expression builder instances changed: now each type having one has a static let
          binding B within the type namespace using a module qualification trick via F# attributes


18/1/2016:
* REFACT: a lot of minor and major refactors to the whole code
* UP: scheme unification and unify_scheme implemented
* UP: prefix update and slicing implemented
* REFACT: Solve term unification rewritten using a new M.attemp_unify monadic method in place of try_mgu pure function (which still exists btw, as it's been used elsewhere)


17/1/2016:
* REFACT: substitution renamed: now tθ stands for tsubst and kθ for ksubst, leading to a very natural θ for both. Symbols Σ and Θ are not used anymore
* UP: unification for HML implemented roughly: needs completion and testing of course
* UP: skolemification of type variables implemented via T_Cons; kinds are a problem though. Probably T_Forall should carry kinds along with quantified variables


16/1/2016: [v0.9.0]
* version bump due to new HML system integration
* REFACT: predicate is no more as it did not make much sense: every item schemes consist of is now inlined into the scheme record directly