@@ -43,17 +43,21 @@ module Typing =
 
 module Printing =
 
+    let unicode_encoding = Text.Encoding.Unicode
+
     // dynamic configuration
 
     type cfg () =
         let mutable greek_tyvars_ = false
 
         member __.unicode
-            with get () = Console.OutputEncoding = Text.Encoding.Unicode
+            with get () = Console.OutputEncoding = unicode_encoding
             and set b =
                 match b with
-                | true  -> Console.OutputEncoding <- Text.Encoding.Unicode
+                | true  -> Console.OutputEncoding <- unicode_encoding
+                           Console.InputEncoding <- unicode_encoding
                 | false -> Console.OutputEncoding <- Text.Encoding.ASCII
+                           Console.InputEncoding <- Text.Encoding.ASCII
 
         member this.greek_tyvars
             with get () = greek_tyvars_
@@ -62,8 +66,8 @@ module Printing =
                 | true  -> this.unicode <- true
                            greek_tyvars_ <- true
                 | false -> greek_tyvars_ <- false
-
-        member this.forall = if this.unicode then "∀" else "forall "
+                
+        member this.forall = if this.unicode then "\u2200" else "forall "
         member this.bottom = if this.unicode then "⏊" else "_|_"
 
         member this.tyvar_range = if this.greek_tyvars then 'α', 'ζ' else 'a', 'z'
@@ -92,6 +96,8 @@ module Printing =
     let anonymous_var_fmt : StringFormat<string -> int -> string> = "%s?%d"
     let named_var_fmt : StringFormat<string -> int -> string> = "%s_%d"
     #endif
+    let empty_prefix = "()"
+
 
     module Prompt =
         let prefix_sep = " "
