@@ -125,7 +125,7 @@ module Error =
         E 22 loc "when generalizing symbol `%O : %O` the constraint `%s : %O` has not been resolved and was referring to a closed-world overloaded symbol" x t cx ct
 
     let lambda_parameter_is_not_monomorphic loc x t =
-        E 23 loc "function parameter is used polymorphically: %s : %O" x t
+        E 23 loc "function parameter is used polymorphically without explicit annotation: %s : %O" x t
 
     let skolemized_type_variable_escaped loc tsk =
         E 24 loc "skolem type variable %O escaped" tsk
