@@ -5,14 +5,15 @@
 
 namespace Test 
 
+let app f x = f x
+
 let id x = x
+
+let revapp x f = f x
 
 (*let poly (f : forall 'a. 'a -> 'a) = f 1, f true
 
 
-let app f x = f x
-
-let revapp x f = f x
 
 let a = poly id*)
 
