@@ -1,4 +1,8 @@
 ﻿
+21/1/2016:
+* FIX: when the left-hand pattern of a let-binding is a plain identifier, no trivial unification takes place between the inferred type and the type inferred for the pattern
+
+
 20/1/2016:
 * UP: HML implementation largely done
 * TEST: testing of HML system started: a few early bugs have been fixed, but there's gonna be a lot of work to do yet
@@ -26,6 +30,7 @@
 * REFACT: substitution renamed: now tθ stands for tsubst and kθ for ksubst, leading to a very natural θ for both. Symbols Σ and Θ are not used anymore
 * UP: unification for HML implemented roughly: needs completion and testing of course
 * UP: skolemification of type variables implemented via T_Cons; kinds are a problem though. Probably T_Forall should carry kinds along with quantified variables
+* FIX: split fixed: it used to reverse the prefix, now it keeps the order
 
 
 16/1/2016: [v0.9.0]
